begining of lesson small fixes

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -114,7 +114,7 @@ main .section-1 .col-md-6 p {
 
 .contact-form h6 {
     font-family: var(--Rubik);
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     padding-top: 1rem;
 }
 
@@ -138,13 +138,13 @@ header .nav-link:hover {
 
 header .navbar-brand {
     color: white;
-    padding-left: 1.5rem;
+    padding-left: 0.5rem;
     font-family: var(--Fjalla);
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 header .navbar-toggler-icon {
-    padding-right: 10px;
+    padding-right: 5px;
 }
 
 header .navbar-toggler-icon {
